assets/71ceae26866cded4_style.css
/* ... */
.sec_three_top_wrap {
    text-align: center;
    margin-bottom: 40px;
}

.sec_three_top_wrap h2,
.sec_three_top_wrap p {
    margin: 0 auto;
}

.sec_three h2 {}

.sec_three h2 {
    font-family: "Outfit-Bold", sans-serif;
    font-weight: bold;
    font-size: 48px;
    color: #040404;
    max-width: ;
    margin: 44px auto;

}

.sec_three h2 span {
    color: #00adee;
}

.sec_three .over_hd_para {
    font-family: "Outfit-Bold", sans-serif;
    font-weight: bold;
    font-size: 26px;
    color: #040404;
    max-width: 798px;
}

.sec_three p {
    font-family: "Outfit-Regular", sans-serif;
    font-weight: normal;
    font-size: 22px;
    color: #040404;
    max-width: 950px;
}

.single_ingr_box {
    display: flex;
    align-items: center;
    background-color: #ffffff;
    width: 77%;
    margin-left: auto;
    margin-right: 3%;
    margin-top: 21px;
}

.single_ingr_img_wrap {
    max-width: 272px;
    margin: -36px 30px -39px -170px;
}

.single_ingr_text_wrap {
    max-width: calc(100% - 194px);
    padding: 26px 0 0 0;
}

.sit_hd {
    font-family: "Outfit-Bold", sans-serif;
    font-weight: bold;
    font-size: 26px;
    color: #040404;
    text-align: left;
    margin-bottom: 10px;
}

.sit_hd sup {
    font-weight: normal;
    font-size: 19px;

}

.sit_para {
    font-family: "Outfit-Regular", sans-serif;
    font-weight: normal;
    font-size: 22px;
    color: #040404;
    text-align: left;
}

/* ------------- */

.sec_four {
    padding: 60px 21px 0;
    background: url("e8ce22339137d16a_background3.png");
    background-size: cover;
    background-position: top center;
    background-repeat: no-repeat;
    text-align: center;
}

.sec_four h2 {}

.sec_four h2 {
    font-family: "Outfit-Bold", sans-serif;
    font-weight: bold;
    font-size: 48px;
    color: #ffffff;
    max-width: 818px;
    margin: 44px auto;

}

.sec_four h2 span {
    color: #00adee;
}

.sec_four p {
    font-family: "Outfit-Regular", sans-serif;
    font-weight: normal;
    font-size: 22px;
    color: #ffffff;
    text-align: left;
    margin-bottom: 40px;
}

/* .provi_compo_img_wrap {
    background: url("9a370b2027a99449_product12.png");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    width: 100%;
    aspect-ratio: ;
} */

.sec_four_mid_wrap {
    /* background: url("9a370b2027a99449_product12.png");
    background-size: 57%;
    background-position: top right;
    background-position-y: -30px;
    background-position-x: -30px;
    background-repeat: no-repeat; */
    position: relative;
}

.provi_compo_img_wrap {
    position: absolute;
    top: -94px;
    right: -90px;
}

/* .provi_compo_img_wrap img {
    width: 120%;
} */
.sec_four_end_wrap {
    margin-bottom: -50px;
    padding-top: 20px;
}

/* .unique_combination_wrap_row div{
height: 100%;
} */
.table-col-equal:first-child {
    padding: 0 15px 0 0;
}

.table-col-equal {
    padding: 0 15px;
}

.table-col-equal:last-child {
    padding: 0 0 0 15px;
}

.unique_combination_sngl_box {
    background-color: #f0f7fa;
    border: 3px solid #ffffff;
    box-shadow: rgba(0, 0, 0, 0.08) 0px 3px 8px;
    text-align: center;
    padding: 0 26px 0 26px;
    height: 100%;
}

.ucsb_one {}

.ucsb_two {}

.ucsb_three {}

.ucsb_image_box {
    margin-top: -132px;
    margin-bottom: 22px;
}

.ucsb_image_box img {
    margin: 0 auto;
}

.ucsb_text_box {}

.unique_combination_sngl_box .ucsb_text_hd {
    font-family: "Outfit-Bold", sans-serif;
    font-weight: bold;
    font-size: 26px;
    color: #040404;
    text-align: center;
    margin-bottom: 27px;
}

.unique_combination_sngl_box .ucsb_text_hd sup {
    font-family: "Outfit-Regular", sans-serif;
    font-weight: normal;
    font-size: 19px;
    color: #040404;
}

.unique_combination_sngl_box .pucsb_text_desc {
    font-family: "Outfit-Regular", sans-serif;
    font-weight: normal;
    font-size: 22px;
    color: #040404;
    text-align: center;
    margin-bottom: 27px;
}

/* ------------- */
.sec_supplement_facts {
    padding: 95px 0 0 0;
}

.supplement_facts_img_wraper {
    text-align: center;
    margin-bottom: 50px;
}

.supplement_facts_img_wraper img {
    max-width: 921px;
    /* margin: 0 auto; */
}

/* ------------- */
.sec_feature {}

.sec_feature h3 {
    font-family: "Outfit-Bold", sans-serif;
    font-weight: bold;
    font-size: 26px;
    line-height: 1.5;
    color: #040404;
    max-width: 556px;
    margin: 0 auto;
    text-align: center;
}

.sec_feature h3 span {
    color: #00adee;
}

.feature_icon_row_equal {
    display: flex;
    width: 100%;
    max-width: 920px;
    margin: 0 auto;
    margin-top: 30px;
    margin-bottom: 30px;
}

.feature_icon_col_equal {
    flex: 1;

}

.feature_icon_box {
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
}

.feature_icon_col_equal:nth-child(1) .feature_icon_box {
    border-right: 1px solid #d5d5d5;
}

.feature_icon_col_equal:nth-child(2) .feature_icon_box {
    border-right: 1px solid #d5d5d5;
}

.feature_icon_col_equal:nth-child(3) .feature_icon_box {
    border-right: 1px solid #d5d5d5;
}

.fib_icon_wrap {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 80px;
    height: 80px;
    margin: 0 auto;
}

.fib_icon_desc {
    font-family: "Outfit-SemiBold", sans-serif;
    font-weight: 600;
    font-size: 26px;
    text-align: center;
}

.button_wrap {
    text-align: center;
    padding: 40px 0;
}

.buy_now_btn {
    display: inline-block;

}

/* --------- */
.grnty_sec {
    padding: 0 0 50px 0;
}

.grnty_sec .grnty_img_wrap {
    max-width: 1035px;
    margin: 0 auto;
}

/* .grnty_sec .grnty_img_wrap img {} */
.grnty_sec .grnty_img_wrap img {
    margin: 0 auto;
}


/* ----------- */
.eptwlcb_sec {
    background-color: #f1f8fb;
    padding: 50px 0;
}
/* ... */

